# Table_Parsing

./: .table-parse.yml.example  CHANGELOG.md  README.md  demo_format_routing.py  pyproject.toml
.claude/: settings.local.json
docs/: output-format-examples.md  table-parsing-ir-requirements-clarification.md
docs/superpowers/plans/: 2026-05-03-table-parsing-ir.md
openspec/changes/archive/2026-05-03-table-parsing-ir/: design.md  tasks.md
openspec/changes/table-parsing-ir/: proposal.md  tasks.md
openspec/changes/table-parsing-ir/specs/config-system/: spec.md
openspec/changes/table-parsing-ir/specs/excel-parsing/: spec.md
scripts/: check_quality.ps1  check_quality.py  check_quality.sh
src/table_parsing/: __init__.py  cli.py  cli_config.py  config.py  engine.py  exceptions.py  model_client.py
src/table_parsing/ir/: __init__.py  model.py
src/table_parsing/media/: __init__.py  extractor.py  understanding.py
src/table_parsing/model_client/: __init__.py  base.py  openai_compat.py
src/table_parsing/parsers/: __init__.py  base.py  csv_parser.py  factory.py  registry.py  xls_parser.py  xlsx_parser.py
src/table_parsing_ir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  create_test_xls_files.py  test_acceptance.py  test_cli.py  test_cli_config.py  test_config.py  test_csv_parser.py  test_exceptions.py  test_fault_tolerance.py  test_format_routing.py  test_ir_model.py  test_ir_no_pandas.py  test_media_extractor.py  test_media_understanding.py  test_model_client.py  test_parse_file.py  test_sheet_workbook.py  test_xls_parser.py  test_xlsx_parser.py
tests/test_data/xls/: data_types.xls  merged_cells.xls  multiple_sheets.xls  simple.xls
(+5 files in other folders)
