# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table-parsing-ir"
version = "0.1.0"
description = "Unified table file parsing library with pure Python IR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "charset-normalizer>=3.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pandas>=2.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
